fix/some issues

--- a/public/task-description.html
+++ b/public/task-description.html
@@ -999,7 +999,7 @@
                   </div>
                   <!-- Blue Line -->
                   <div
-                    class="w-0.5 h-11 shrink-0 bg-brand-blue rounded-full translate-x-px"
+                    class="w-0.5 h-11 shrink-0 bg-brand-blue rounded-full"
                   ></div>
                 </div>
                 <!-- Bottom Line -->
