--- a/public/task-description.html
+++ b/public/task-description.html
@@ -20,7 +20,7 @@
         </div>
 
         <div
-          class="max-h-[calc(100vh-4rem)] h-full flex flex-col justify-between gap-20 overflow-y-auto"
+          class="max-h-[calc(100vh-64px)] h-full flex flex-col justify-between gap-20 overflow-y-auto"
         >
           <!-- Links -->
           <div class="min-h-max space-y-20 overflow-y-auto py-5">
@@ -482,13 +482,13 @@
         </header>
 
         <!-- MAIN CONTENT -->
-        <div class="max-h-[calc(100vh-4rem)] space-y-3 p-6">
+        <div class="max-h-[calc(100vh-64px)] space-y-3 p-6">
           <!-- Top -->
           <div class="flex items-center justify-between">
             <div class="flex items-center gap-2">
               <!-- Sort -->
               <div
-                class="h-8 max-w-[21.0625rem] flex items-center divide-x divide-brand-gray-300 bg-white border border-brand-gray-300 rounded-md"
+                class="h-8 max-w-[337px] flex items-center divide-x divide-brand-gray-300 bg-white border border-brand-gray-300 rounded-md"
               >
                 <div class="text-brand-gray-400 py-1.5 px-3">Sort</div>
                 <!-- Dropdown -->
@@ -515,7 +515,7 @@
               </div>
               <!-- Dropdown Items -->
               <div
-                class="h-8 max-w-[21.0625rem] flex items-center divide-x divide-brand-gray-300 bg-white border border-brand-gray-300 rounded-md"
+                class="h-8 max-w-[337px] flex items-center divide-x divide-brand-gray-300 bg-white border border-brand-gray-300 rounded-md"
               >
                 <div class="text-brand-gray-400 py-1.5 px-3">Project</div>
                 <!-- Dropdown -->
@@ -551,7 +551,7 @@
 
             <!-- Add New Task -->
             <div
-              class="h-8 max-w-[21.0625rem] flex items-center divide-x divide-brand-gray-300 bg-white border border-brand-gray-300 rounded-md"
+              class="h-8 max-w-[337px] flex items-center divide-x divide-brand-gray-300 bg-white border border-brand-gray-300 rounded-md"
             >
               <div class="text-brand-gray-400 py-1.5 px-3">
                 <svg
@@ -579,6 +579,7 @@
 
           <!-- To Dos -->
           <div class="grid grid-cols-2 items-start gap-6">
+            <!-- Task Description -->
             <div
               class="relative bg-white border border-brand-gray-300 rounded-lg pb-4"
             >
@@ -619,7 +620,7 @@
               </div>
               <!-- Tasks List -->
               <div
-                class="task-details-list max-h-[calc(100vh-224px)] relative overflow-y-auto"
+                class="no-scroll max-h-[calc(100vh-14rem)] relative overflow-y-auto"
               >
                 <!-- Task 1 -->
                 <div class="py-1">
@@ -1596,8 +1597,234 @@
                 <div class="h-px w-[90%] mx-auto bg-brand-gray-300"></div>
                 <!-- Bottom Gradient -->
                 <div
-                  class="max-w-[32.75rem] w-full h-28 sticky bottom-0 z-50 bg-task-details-bottom border-none"
+                  class="max-w-[524px] w-full h-28 sticky bottom-0 z-50 bg-task-details-bottom border-none"
                 ></div>
+              </div>
+            </div>
+            <!-- Task Overview -->
+            <div
+              class="no-scroll max-h-[calc(100vh-156px)] relative bg-white border border-brand-gray-300 rounded-lg overflow-auto"
+            >
+              <!-- Title -->
+              <div
+                class="sticky top-0 flex items-center justify-between bg-white z-50 border-b border-brand-gray-300 pt-4 pb-3.5 px-5"
+              >
+                <p class="text-brand-gray-400">Task overview</p>
+                <!-- Menu -->
+                <button>
+                  <svg
+                    width="12"
+                    height="4"
+                    viewBox="0 0 12 4"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.95 3.35C1.575 3.35 1.25625 3.21875 0.99375 2.95625C0.73125 2.69375 0.6 2.375 0.6 2C0.6 1.625 0.73125 1.30625 0.99375 1.04375C1.25625 0.781249 1.575 0.649999 1.95 0.649999C2.325 0.649999 2.64375 0.781249 2.90625 1.04375C3.16875 1.30625 3.3 1.625 3.3 2C3.3 2.375 3.16875 2.69375 2.90625 2.95625C2.64375 3.21875 2.325 3.35 1.95 3.35ZM6 3.35C5.625 3.35 5.30625 3.21875 5.04375 2.95625C4.78125 2.69375 4.65 2.375 4.65 2C4.65 1.625 4.78125 1.30625 5.04375 1.04375C5.30625 0.781249 5.625 0.649999 6 0.649999C6.375 0.649999 6.69375 0.781249 6.95625 1.04375C7.21875 1.30625 7.35 1.625 7.35 2C7.35 2.375 7.21875 2.69375 6.95625 2.95625C6.69375 3.21875 6.375 3.35 6 3.35ZM10.05 3.35C9.675 3.35 9.35625 3.21875 9.09375 2.95625C8.83125 2.69375 8.7 2.375 8.7 2C8.7 1.625 8.83125 1.30625 9.09375 1.04375C9.35625 0.781249 9.675 0.649999 10.05 0.649999C10.425 0.649999 10.7438 0.781249 11.0063 1.04375C11.2688 1.30625 11.4 1.625 11.4 2C11.4 2.375 11.2688 2.69375 11.0063 2.95625C10.7438 3.21875 10.425 3.35 10.05 3.35Z"
+                      fill="#778CA2"
+                    />
+                  </svg>
+                </button>
+              </div>
+
+              <!-- Body -->
+              <div class="space-y-6 pb-16">
+                <!-- Progress -->
+                <div
+                  class="h-14 flex items-center justify-between bg-brand-gray-100 px-6"
+                >
+                  <p class="text-brand-gray-400">
+                    Overall progress 6/13 subtasks complete
+                  </p>
+                  <!-- Progress item -->
+                  <div
+                    class="w-16 h-1.5 shrink-0 bg-brand-gray-200 rounded-full"
+                  >
+                    <div
+                      class="h-full w-2/3 bg-brand-orange rounded-full"
+                    ></div>
+                  </div>
+                </div>
+
+                <!-- Main Part -->
+                <div class="space-y-6 px-6">
+                  <!-- Title -->
+                  <h3 class="text-h3 font-semibold">Design search page</h3>
+                  <!-- Person -->
+                  <div class="flex items-center justify-between">
+                    <!-- Left -->
+                    <div class="space-y-3">
+                      <p class="text-brand-gray-400">Assigned to</p>
+                      <!-- Image & Name -->
+                      <div class="flex items-center gap-3">
+                        <div
+                          class="w-7 h-7 shrink-0 rounded-full overflow-hidden"
+                        >
+                          <img
+                            src="./assets/images/img-girl.png"
+                            alt="Image Girl"
+                          />
+                        </div>
+                        <p class="font-medium">Alberta Strickland</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Description -->
+                  <div class="space-y-3">
+                    <h3 class="text-h3 font-semibold">Description</h3>
+                    <p class="font-light">
+                      There is no denying the fact that the success of an
+                      advertisement lies mostly in the headline. The headline
+                      should attract the reader.
+                    </p>
+                    <div class="flex items-center gap-1.5">
+                      <div
+                        class="h-7 bg-brand-green/15 text-brand-green rounded-full py-1 px-4"
+                      >
+                        Spotify
+                      </div>
+                      <div
+                        class="h-7 bg-brand-gray-500/15 text-brand-gray-500 rounded-full py-1 px-4"
+                      >
+                        UI/UX
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Checklist -->
+                  <div class="space-y-3">
+                    <h3 class="text-h3 font-semibold">Checklist</h3>
+                    <ul class="space-y-3">
+                      <li>
+                        <input type="checkbox" id="checklist1" class="hidden" />
+                        <label
+                          for="checklist1"
+                          class="w-full flex items-start gap-3 cursor-pointer"
+                        >
+                          <span
+                            class="w-5 h-5 shrink-0 grid place-content-center bg-brand-gray-300 rounded-sm"
+                          >
+                            <svg
+                              width="11"
+                              height="9"
+                              viewBox="0 0 11 9"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                              class="hidden"
+                            >
+                              <path
+                                d="M3.77343 7.86705L0.286832 4.38045C0.0773631 4.17098 0.0773631 3.83135 0.286832 3.62186L1.0454 2.86327C1.25487 2.65378 1.59452 2.65378 1.80399 2.86327L4.15273 5.21199L9.18347 0.181271C9.39294 -0.0281972 9.73259 -0.0281972 9.94206 0.181271L10.7006 0.939859C10.9101 1.14933 10.9101 1.48896 10.7006 1.69845L4.53202 7.86707C4.32253 8.07654 3.9829 8.07654 3.77343 7.86705Z"
+                                fill="white"
+                              />
+                            </svg>
+                          </span>
+                          <p class="font-medium">Design new home page</p>
+                        </label>
+                      </li>
+                      <li>
+                        <input type="checkbox" id="checklist2" class="hidden" />
+                        <label
+                          for="checklist2"
+                          class="w-full flex items-start gap-3 cursor-pointer"
+                        >
+                          <span
+                            class="w-5 h-5 shrink-0 grid place-content-center bg-brand-gray-300 rounded-sm"
+                          >
+                            <svg
+                              width="11"
+                              height="9"
+                              viewBox="0 0 11 9"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                              class="hidden"
+                            >
+                              <path
+                                d="M3.77343 7.86705L0.286832 4.38045C0.0773631 4.17098 0.0773631 3.83135 0.286832 3.62186L1.0454 2.86327C1.25487 2.65378 1.59452 2.65378 1.80399 2.86327L4.15273 5.21199L9.18347 0.181271C9.39294 -0.0281972 9.73259 -0.0281972 9.94206 0.181271L10.7006 0.939859C10.9101 1.14933 10.9101 1.48896 10.7006 1.69845L4.53202 7.86707C4.32253 8.07654 3.9829 8.07654 3.77343 7.86705Z"
+                                fill="white"
+                              />
+                            </svg>
+                          </span>
+                          <p class="font-medium">
+                            Send design samples to the customer
+                          </p>
+                        </label>
+                      </li>
+                      <li>
+                        <input type="checkbox" id="checklist3" class="hidden" />
+                        <label
+                          for="checklist3"
+                          class="w-full flex items-start gap-3 cursor-pointer"
+                        >
+                          <span
+                            class="w-5 h-5 shrink-0 grid place-content-center bg-brand-gray-300 rounded-sm"
+                          >
+                            <svg
+                              width="11"
+                              height="9"
+                              viewBox="0 0 11 9"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                              class="hidden"
+                            >
+                              <path
+                                d="M3.77343 7.86705L0.286832 4.38045C0.0773631 4.17098 0.0773631 3.83135 0.286832 3.62186L1.0454 2.86327C1.25487 2.65378 1.59452 2.65378 1.80399 2.86327L4.15273 5.21199L9.18347 0.181271C9.39294 -0.0281972 9.73259 -0.0281972 9.94206 0.181271L10.7006 0.939859C10.9101 1.14933 10.9101 1.48896 10.7006 1.69845L4.53202 7.86707C4.32253 8.07654 3.9829 8.07654 3.77343 7.86705Z"
+                                fill="white"
+                              />
+                            </svg>
+                          </span>
+                          <p class="font-medium">Type to add more …</p>
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
+                  <!-- Attachments -->
+                  <div class="space-y-3">
+                    <h3 class="text-h3 font-semibold">Attachments</h3>
+                    <label
+                      for="attachments"
+                      class="h-7 w-fit flex items-center gap-1 cursor-pointer border border-brand-gray-300 rounded-full px-4"
+                    >
+                      Upload your attachment
+                      <svg
+                        width="14"
+                        height="14"
+                        viewBox="0 0 14 14"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M6.4 10.2H7.6V7.6H10.2V6.4H7.6V3.8H6.4V6.4H3.8V7.6H6.4V10.2ZM7 13.4C6.12222 13.4 5.29444 13.2333 4.51667 12.9C3.73889 12.5667 3.05556 12.1111 2.46667 11.5333C1.88889 10.9444 1.43333 10.2611 1.1 9.48333C0.766667 8.70556 0.6 7.87778 0.6 7C0.6 6.11111 0.766667 5.28333 1.1 4.51667C1.43333 3.73889 1.88889 3.06111 2.46667 2.48333C3.05556 1.89444 3.73889 1.43333 4.51667 1.1C5.29444 0.766666 6.12222 0.599999 7 0.599999C7.88889 0.599999 8.71667 0.766666 9.48333 1.1C10.2611 1.43333 10.9389 1.89444 11.5167 2.48333C12.1056 3.06111 12.5667 3.73889 12.9 4.51667C13.2333 5.28333 13.4 6.11111 13.4 7C13.4 7.87778 13.2333 8.70556 12.9 9.48333C12.5667 10.2611 12.1056 10.9444 11.5167 11.5333C10.9389 12.1111 10.2611 12.5667 9.48333 12.9C8.71667 13.2333 7.88889 13.4 7 13.4ZM7 12.2C8.44444 12.2 9.67222 11.6944 10.6833 10.6833C11.6944 9.67222 12.2 8.44444 12.2 7C12.2 5.55556 11.6944 4.32778 10.6833 3.31667C9.67222 2.30555 8.44444 1.8 7 1.8C5.55556 1.8 4.32778 2.30555 3.31667 3.31667C2.30556 4.32778 1.8 5.55556 1.8 7C1.8 8.44444 2.30556 9.67222 3.31667 10.6833C4.32778 11.6944 5.55556 12.2 7 12.2Z"
+                          fill="#778CA2"
+                        />
+                      </svg>
+                    </label>
+                    <input id="attachments" type="file" class="hidden" />
+                  </div>
+                </div>
+              </div>
+
+              <!-- Message Input -->
+              <div
+                class="h-14 sticky bottom-0 z-20 flex items-center justify-between bg-brand-gray-100"
+              >
+                <input
+                  type="text"
+                  class="flex-1 outline-none bg-transparent placeholder:text-brand-gray-400 pl-6 py-2"
+                  placeholder="Type to add your comment"
+                />
+                <button class="h-full w-16 grid place-content-center">
+                  <svg
+                    width="13"
+                    height="10"
+                    viewBox="0 0 13 10"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M0.4 9.8V0.199999L12.4 5L0.4 9.8ZM1.6 8.01667L9.16667 5L1.6 1.98333V3.8L5.2 5L1.6 6.2V8.01667ZM1.6 8.01667V5V1.98333V3.8V6.2V8.01667Z"
+                      fill="#778CA2"
+                    />
+                  </svg>
+                </button>
               </div>
             </div>
           </div>
