--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -482,9 +482,11 @@
         </header>
 
         <!-- MAIN CONTENT -->
-        <div class="flex divide-x divide-brand-gray-300 p-6">
+        <div
+          class="max-h-[calc(100vh-96px)] overflow-auto flex divide-x divide-brand-gray-300 p-6"
+        >
           <!-- Left -->
-          <div class="flex-1 space-y-8 pt-6 pr-8 p-9">
+          <div class="flex-1 space-y-8 pt-6 pr-8 pb-9">
             <!-- Top -->
             <div class="space-y-6">
               <div class="flex items-center justify-between">
