--- a/public/task-description.html
+++ b/public/task-description.html
@@ -1597,7 +1597,7 @@
                 <div class="h-px w-[90%] mx-auto bg-brand-gray-300"></div>
                 <!-- Bottom Gradient -->
                 <div
-                  class="max-w-[524px] w-full h-28 sticky bottom-0 z-50 bg-task-details-bottom border-none"
+                  class="w-full h-28 sticky bottom-0 z-50 bg-task-details-bottom border-none"
                 ></div>
               </div>
             </div>
