add/settings poppup

--- a/public/tasks-not-found.html
+++ b/public/tasks-not-found.html
@@ -482,7 +482,9 @@
         </header>
 
         <!-- MAIN CONTENT -->
-        <div class="min-h-screen grid place-content-center space-y-3 p-6">
+        <div
+          class="min-h-[calc(100vh-120px)] grid place-content-center space-y-3 p-6"
+        >
           <div class="space-y-8">
             <img src="./assets/images/img-taks-not-found.svg" alt="Not found" />
             <div class="text-center">
